tests/NormalTests/paczka1/fuzzy1/44876040.err
Error in line 1: WjRfHEI S684 549,5
Error in line 7: 9gw2z S130 26,0
Error in line 24: S684 A152 197,2
Error in line 27: pgN0 S378 57,1
Error in line 28: OLwGKiibC A152 25,0
